--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,11 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 .DS_Store
+.classpath
+.factorypath
+.project
+*.prefs
+target/classes/application.properties
+target/classes/META-INF/MANIFEST.MF
+target/classes/META-INF/maven/com.cloudapps.developer/aws-springboot-sns/pom.properties
+target/classes/META-INF/maven/com.cloudapps.developer/aws-springboot-sns/pom.xml
